--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Rubik";
+  src: url("./assets/Rubik-VariableFont_wght.ttf");
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -14,4 +19,62 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.dark {
+  background-color: #252329;
+}
+
+.darker {
+  background-color: #120f13;
+}
+
+.darkest {
+  background-color: #0f0c0f;
+}
+
+.input-bg {
+  background-color: #3c393f;
+}
+
+.shadow-bottom {
+  box-shadow: 0 8px 6px -6px black;
+}
+
+.rubik {
+  font-family: "Rubik";
+}
+
+.secondary-font {
+  color: #bdbdbd;
+}
+
+.secondary {
+  background-color: #3c393f;
+}
+
+.modal-font {
+  color: #828282;
+}
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #c0c0c0 #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 16px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #3c393f;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #c0c0c0;
+  border-radius: 42px;
+  border: 50px ridge #ffffff;
 }
